Changes on the file history.txt for describing some of my hobbies

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
-This is my history I am Juan Morales I'm from Venezuela. 
-I was born in 1999, so I am 23 years old at this moment.
+This is my history I'm Juan Morales I'm from Venezuela. 
+I was born in 1999, so I'm 23 years old at this moment.
+I love watch soccer and sports in general.
 
