--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,5 @@
 This is my history I'm Juan Morales I'm from Venezuela. 
 I was born in 1999, so I'm 23 years old at this moment.
 I love watch soccer and sports in general.
-I seem to be strong but the real thing is that I'm not as much, I'm really quite thin.  
+I seem to be a lovely person but the real thing is that I'mnot as much, I'm really serious.  
 
